/*
Copyright 2024 Nokia.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.sdcio.config_server.apis.condition.v1alpha1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/sdcio/config-server/apis/condition/v1alpha1";

message Condition {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.Condition condition = 1;
}

// A ConditionedStatus reflects the observed status of a resource. Only
// one condition of each type may exist.
message ConditionedStatus {
  // Conditions of the resource.
  // +optional
  // +listType=map
  // +listMapKey=type
  repeated Condition conditions = 1;
}

message UnrecoverableMessage {
  optional string resourceVersion = 1;

  optional string message = 2;
}

