/*
Copyright 2024 Nokia.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.sdcio.config_server.apis.config.v1alpha1;

import "github.com/sdcio/config-server/apis/condition/v1alpha1/generated.proto";
import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/sdcio/config-server/apis/config/v1alpha1";

// Config defines the Schema for the Config API
message Config {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional ConfigSpec spec = 2;

  optional ConfigStatus status = 3;
}

// ConfigBlame is the Schema for the ConfigBlame API
message ConfigBlame {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional ConfigBlameSpec spec = 2;

  optional ConfigBlameStatus status = 3;
}

// ConfigBlameList contains a list of ConfigBlames
message ConfigBlameList {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated ConfigBlame items = 2;
}

// ConfigBlameSpec defines the desired state of ConfigBlame
message ConfigBlameSpec {
}

// ConfigBlameStatus defines the observed state of ConfigBlame
message ConfigBlameStatus {
  // +kubebuilder:pruning:PreserveUnknownFields
  optional .k8s.io.apimachinery.pkg.runtime.RawExtension value = 2;
}

message ConfigBlob {
  // Path defines the path relative to which the value is applicable
  optional string config = 1;

  // +kubebuilder:pruning:PreserveUnknownFields
  optional .k8s.io.apimachinery.pkg.runtime.RawExtension value = 2;
}

message ConfigDeviation {
  // Path of the config this deviation belongs to
  optional string path = 1;

  // DesiredValue is the desired value of the config belonging to the path
  optional string desiredValue = 2;

  // CurrentValue defines the current value of the config belonging to the path
  // that is currently configured on the target
  optional string actualValue = 3;

  // Reason defines the reason of the deviation
  optional string reason = 4;
}

// ConfigList contains a list of Configs
message ConfigList {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated Config items = 2;
}

// ConfigSet is the Schema for the ConfigSet API
message ConfigSet {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional ConfigSetSpec spec = 2;

  optional ConfigSetStatus status = 3;
}

// ConfigSetList contains a list of ConfigSets
message ConfigSetList {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated ConfigSet items = 2;
}

// ConfigSetSpec defines the desired state of Config
message ConfigSetSpec {
  // Targets defines the targets on which this configSet applies
  optional Target target = 1;

  // Lifecycle determines the lifecycle policies the resource e.g. delete is orphan or delete
  // will follow
  optional Lifecycle lifecycle = 2;

  // Priority defines the priority of this config
  optional int64 priority = 3;

  // Revertive defines if this CR is enabled for revertive or non revertve operation
  optional bool revertive = 4;

  // Config defines the configuration to be applied to a target device
  // +kubebuilder:pruning:PreserveUnknownFields
  repeated ConfigBlob config = 5;
}

// ConfigSetStatus defines the observed state of Config
message ConfigSetStatus {
  // ConditionedStatus provides the status of the Readiness using conditions
  // if the condition is true the other attributes in the status are meaningful
  optional .github.com.sdcio.config_server.apis.condition.v1alpha1.ConditionedStatus conditionedStatus = 1;

  // Targets defines the status of the configSet resource on the respective target
  repeated TargetStatus targets = 2;
}

// ConfigSpec defines the desired state of Config
message ConfigSpec {
  // Lifecycle determines the lifecycle policies the resource e.g. delete is orphan or delete
  // will follow
  optional Lifecycle lifecycle = 1;

  // Priority defines the priority of this config
  optional int64 priority = 2;

  // Revertive defines if this CR is enabled for revertive or non revertve operation
  optional bool revertive = 3;

  // Config defines the configuration to be applied to a target device
  // +kubebuilder:pruning:PreserveUnknownFields
  repeated ConfigBlob config = 4;
}

// ConfigStatus defines the observed state of Config
message ConfigStatus {
  // ConditionedStatus provides the status of the Readiness using conditions
  // if the condition is true the other attributes in the status are meaningful
  optional .github.com.sdcio.config_server.apis.condition.v1alpha1.ConditionedStatus conditionedStatus = 1;

  // LastKnownGoodSchema identifies the last known good schema used to apply the config successfully
  optional ConfigStatusLastKnownGoodSchema lastKnownGoodSchema = 2;

  // AppliedConfig defines the config applied to the target
  optional ConfigSpec appliedConfig = 3;

  // Deviations generation used for the latest config apply
  optional int64 deviationGeneration = 4;
}

message ConfigStatusLastKnownGoodSchema {
  // Schema Type
  optional string type = 1;

  // Schema Vendor
  optional string vendor = 2;

  // Schema Version
  optional string version = 3;
}

// Deviation is the Schema for the Deviation API
message Deviation {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional DeviationSpec spec = 2;

  optional DeviationStatus status = 3;
}

// DeviationList contains a list of Deviations
message DeviationList {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated Deviation items = 2;
}

// DeviationSpec defines the desired state of Deviation
message DeviationSpec {
  optional string deviationType = 1;

  // Deviations identify the configuration deviation based on the last applied config CR
  repeated ConfigDeviation deviations = 2;
}

// DeviationStatus defines the observed state of Deviation
message DeviationStatus {
  // ConditionedStatus provides the status of the Readiness using conditions
  // if the condition is true the other attributes in the status are meaningful
  optional .github.com.sdcio.config_server.apis.condition.v1alpha1.ConditionedStatus conditionedStatus = 1;
}

message Lifecycle {
  // DeletionPolicy specifies what will happen to the underlying resource
  // when this resource is deleted - either "delete" or "orphan" the
  // resource.
  // +kubebuilder:validation:Enum=`delete`;`orphan`
  // +kubebuilder:default=delete
  optional string deletionPolicy = 1;
}

// RunningConfig is the Schema for the RunningConfig API
message RunningConfig {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional RunningConfigSpec spec = 2;

  optional RunningConfigStatus status = 3;
}

// RunningConfigList contains a list of RunningConfigs
message RunningConfigList {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated RunningConfig items = 2;
}

// RunningConfigSpec defines the desired state of RunningConfig
message RunningConfigSpec {
}

// RunningConfigStatus defines the observed state of RunningConfig
message RunningConfigStatus {
  // +kubebuilder:pruning:PreserveUnknownFields
  optional .k8s.io.apimachinery.pkg.runtime.RawExtension value = 2;
}

message Target {
  // TargetSelector defines the selector used to select the targets to which the config applies
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.LabelSelector targetSelector = 1;
}

message TargetStatus {
  optional string name = 1;

  // right now we assume the namespace of the config and target are aligned
  // NameSpace string `json:"namespace" protobuf:"bytes,2,opt,name=name"`
  // Condition of the configCR status
  optional .github.com.sdcio.config_server.apis.condition.v1alpha1.Condition condition = 3;
}

